# Hands-on-LevelUp-in-AI

./: .env.example  .gitignore  README.md  pyproject.toml  quick-start.md  setup_instructions.md  spl_season7_checklist.md
openai_bytes/: 01_understanding_openai_models.ipynb  01_understanding_openai_models.md  02_async_api_calls.ipynb  02_making_api_calls.md  03_async_api_calls.md  03_function_calling_and_tools.ipynb  04_rate_limits_with_responses.ipynb  quick-start.md
spl7_registration/: README.md  client.py  register_team.ipynb  update_team.ipynb
week1/: learning_with_chatgpt.md  pyproject.toml  setup_instructions.md  week1_python_basics.ipynb
week1/guides/: learning_with_chatgpt.md
week1/notebooks/: python_basics.ipynb
week2/: 001_apis_and_networking.ipynb  002_1_tcp_server.ipynb  002_2_tcp_client.ipynb  002_3_http_server.ipynb  002_4_http_client.ipynb  002_port_communication.ipynb  learning_markdown.md  week2_apis_and_networking.ipynb  week2_port_communication.ipynb
week2/power_ups/: 002_1_tcp_server.ipynb  002_2_tcp_client.ipynb  002_3_http_server.ipynb  002_4_http_client.ipynb  environment_variables_in_production.md
week3/: 001_building_chat_assistant_with_gemini.ipynb  llm_learning_resources.md
week4/: prompting_techniques.md
